fixed spacing of create comment

--- a/Angular/src/app/pages/home/time-line/time-line.component.css
+++ b/Angular/src/app/pages/home/time-line/time-line.component.css
@@ -258,4 +258,5 @@
 
   .smile-icon > span{
     cursor: pointer;
+    color: #C6C9D0;
   }
